[gd_scene load_steps=4 format=2]

[ext_resource path="res://get_exp/exp_node.gd" type="Script" id=1]
[ext_resource path="res://Fonts/New Innerspeaker Reguler.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="nivel_bases" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5874
margin_right = 1.5874
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nivel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.212
anchor_right = 0.5
anchor_bottom = 0.212
margin_left = -56.0
margin_top = -0.200005
margin_right = 56.0
margin_bottom = 109.8
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_nivel2" type="Label" parent="nivel"]
anchor_left = 0.5
anchor_top = 0.609
anchor_right = 0.5
anchor_bottom = 0.609
margin_left = -56.0
margin_top = 0.00999451
margin_right = 56.0
margin_bottom = 43.01
text = "Nivel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_total" type="Label" parent="."]
anchor_left = 0.345
anchor_top = 0.432
anchor_right = 0.345
anchor_bottom = 0.432
margin_left = -55.5472
margin_top = 0.250519
margin_right = 56.4528
margin_bottom = 110.251
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_total2" type="Label" parent="exp_total"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -56.0
margin_right = 56.0
margin_bottom = 44.0
text = "Exp_total"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_nivel_atual" type="Label" parent="."]
anchor_left = 0.64
anchor_top = 0.431
anchor_right = 0.64
anchor_bottom = 0.431
margin_left = -55.6272
margin_top = -0.149475
margin_right = 56.3728
margin_bottom = 109.851
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_nivel_atual2" type="Label" parent="exp_nivel_atual"]
anchor_left = 0.504
anchor_top = 0.636
anchor_right = 0.504
anchor_bottom = 0.636
margin_left = -56.448
margin_top = 0.0399933
margin_right = 56.552
margin_bottom = 40.04
text = "Exp_nivel_atual"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_restante" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.657
anchor_right = 0.5
anchor_bottom = 0.657
margin_left = -55.736
margin_top = 0.168427
margin_right = 56.264
margin_bottom = 110.168
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_restante2" type="Label" parent="exp_restante"]
anchor_left = 0.5
anchor_top = 0.657
anchor_right = 0.5
anchor_bottom = 0.657
margin_left = -56.0
margin_top = -0.270004
margin_right = 56.0
margin_bottom = 37.73
text = "Exp_proximo_nivel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
